layout structure & design #1

--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
     <link rel="manifest" href="./favicon/site.webmanifest">
     <link rel="mask-icon" href="./favicon/" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">  
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    Content
+    <header> 
+    HEADER content
+    </header>
+    <main>
+        Main text
+    </main>
+    <footer>
+        footer content 
+    </footer>
 </body>
 </html>
