--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <header> 
-    HEADER content
+    <header>
+        <img src="./logo.webp" alt="Clay" >
+        <nav>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Job</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
     <main>
         Main text
