--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <header>
-        <img src="./logo.webp" alt="Clay" >
+        <a href="https://zygimantasl.github.io/44-grupe-astronautas/">
+        <img src="./logo.png" alt="Clay">
+    </a>
         <nav>
             <a href="#">About</a>
             <a href="#">Portfolio</a>
@@ -25,7 +27,15 @@
         </nav>
     </header>
     <main>
-        Main text
+        <div>
+        <h1>  404 <br> Lost in space    </h1>
+        <p>You have reached the edge of the universe. The page you requested could not be found. Don't worry and return to the previous page.</p>
+        <div>
+        <a href="#">Go home</a>
+        <a href="#">Back</a>
+        </div>
+        </div>
+        <img src="space.png" alt="Kosmonautas">
     </main>
     <footer>
         footer content 
