css reloc new classes fontawsome logos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="mask-icon" href="./favicon/" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,11 @@
     </header>
     <main>
         <div>
-        <h1>  404 <br> Lost in space    </h1>
+        <h1>
+            <span>404 </span>
+            Lost in space
+        </h1>
+
         <p>You have reached the edge of the universe. The page you requested could not be found. Don't worry and return to the previous page.</p>
         <div>
         <a href="#">Go home</a>
@@ -38,7 +43,13 @@
         <img src="space.png" alt="Kosmonautas">
     </main>
     <footer>
-        footer content 
+        <div>
+        <a href="#" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="#" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        </div>
+        <p>&copy; 2023 - All rights reserved</p>
     </footer>
 </body>
 </html>
